# merednova_assesment

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  REPORT.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: check_setup.py  demo.sh  run_headless.sh  test_openai.py
src/: __init__.py  config.py  main.py  orchestrator.py
src/agent/: __init__.py  aider_client.py
src/audio/: __init__.py  buffer.py  capture.py
src/commands/: __init__.py  system.py  terminal.py
src/events/: __init__.py  types.py
src/router/: __init__.py  classifier.py  intents.py
src/session/: __init__.py  context.py
src/stt/: __init__.py  whisper.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  logging_setup.py  metrics.py  preflight.py  shutdown.py  tts.py
src/vad/: __init__.py  silero.py
src/wakeword/: __init__.py  detector.py
tests/: test_agent.py  test_audio.py  test_config.py  test_context.py  test_metrics.py  test_pipeline.py  test_router.py  test_stt.py  test_terminal.py  test_wakeword.py
